# pwning-agentcore-code-interpreter

./: .gitignore  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  operator_shell.py  requirements-dev.txt  requirements.txt
attacker-infra/: .env.example  Makefile  README.md  malicious_data.csv  malicious_data.csv.example  pyproject.toml  set_env_vars.sh
attacker-infra-s3/: .env.example  Makefile  README.md  malicious_data.csv.example  pyproject.toml
attacker-infra-s3/c2/: __init__.py
attacker-infra-s3/c2/cli/: __init__.py  exploit.py  generate.py  main.py  session.py
attacker-infra-s3/c2/core/: __init__.py  attack_client.py  config.py  payload_generator.py  s3_protocol.py
attacker-infra-s3/c2/payload/: __init__.py  client.py  client_mini.py
attacker-infra-s3/terraform/: README.md  outputs.tf  s3.tf  terraform.tfvars.example  variables.tf
attacker-infra-s3/tests/: __init__.py  mock_s3_server.py  test_s3_integration.py  test_s3_protocol.py
attacker-infra/c2/: __init__.py
attacker-infra/c2/cli/: __init__.py  attack.py  exploit.py  generate.py  main.py  session.py
attacker-infra/helpers/: execute_python.py
attacker-infra/scripts/: check_dns_status.sh  configure_ec2.sh
attacker-infra/src/: attack_client.py  attacker_shell.py  csv_payload_generator.py  dns_protocol.py  payload_client.py
attacker-infra/terraform/: agentcore.tf  cloudwatch.tf  data.tf  ec2.tf  iam.tf  outputs.tf  route53.tf  s3.tf  security_groups.tf  terraform.tf  terraform.tfvars.example  variables.tf
attacker-infra/tests/: mock_dns_server.py  test_dns_integration.py  test_dns_protocol.py  test_dns_server.py
victim-infra/chatbot/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
(+89 files in other folders)
