[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "c2-s3"
version = "0.1.0"
description = "S3-based C2 toolkit for AgentCore sandbox breakout demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "click==8.1.7",
    "requests==2.32.4",
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3"
]

[project.scripts]
c2 = "c2.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["c2"]
