[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "c2"
version = "0.1.0"
description = "DNS-based C2 toolkit for AgentCore sandbox breakout demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click==8.1.7",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
]

[project.scripts]
c2 = "c2.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["c2"]
