[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "victim-chatbot"
version = "1.0.0"
description = "Vulnerable AI chatbot for AgentCore sandbox breakout demo"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "python-multipart==0.0.22",
    "boto3==1.42.17",
    "jinja2==3.1.6",
    "pydantic==2.12.5",
    "pydantic-settings==2.7.1",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
